# django_informixdb

./: .dockerignore  .gitignore  .travis.yml  Dockerfile.testing  Dockerfile.testing.old  README.rst  docker-compose.sqlhosts  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  test-in-docker.sh  tox.ini  wait-for-deps.sh
.github/workflows/: test-build-release.yaml
django_informixdb/: __init__.py  base.py  client.py  compiler.py  creation.py  datatypes.py  features.py  fields.py  introspection.py  operations.py  schema.py
django_informixdb_dev/: __init__.py  creation.py  features.py  introspection.py  operations.py  tableignore.py  version.py
test/: conftest.py  test_base.py  test_compiler.py  test_integration.py  urls.py
test/datatypes/: models.py  test_datatypes.py  test_rawsql.py  tests.py
test/testproject/: settings.py
